--- a/PreSchool/Ola-Daniel-Fikayomi-Result.html
+++ b/PreSchool/Ola-Daniel-Fikayomi-Result.html
@@ -476,7 +476,7 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment: Fikayomi is a great pupil. She is always excited to learn.<br></p>
+                      <p>Class Teachers Comment: Keep up the excellent work.You are a super star.<br></p>
                         &nbsp;
                         &nbsp;
                         <p>Head Teachers Comment: This is an excellent performance. <br></p>
