--- a/PreSchool/Oladokun-Divine-Result.html
+++ b/PreSchool/Oladokun-Divine-Result.html
@@ -478,10 +478,10 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment: Divine is a great pupil. He is always excited to learn. <br></p>
+                    <p>Class Teachers Comment: A remarkable result.Divine, keep inspiring us. <br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: This is an excellent performance. <br></p>
+                     <p>Head Teachers Comment: An excellent performance.keep it up. <br></p>
 
                      &nbsp;
                      &nbsp;
