--- a/PreSchool/Olapade-Thelight-Result.html
+++ b/PreSchool/Olapade-Thelight-Result.html
@@ -478,7 +478,7 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment: TheLight is a great pupil. He is always excited to learn. .  <br ></p>
+                    <p>Class Teachers Comment: An outstanding performance.The sky is not your limit .  <br ></p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment:This is an excellent result.       <br.</p>
