--- a/PreSchool/Olatunde-Blossom-Result.html
+++ b/PreSchool/Olatunde-Blossom-Result.html
@@ -478,10 +478,10 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment: Blossom has made significant improvement this term. We are very pleased with her progress.<br></p>
+                    <p>Class Teachers Comment: An outstanding performance. Keep challenging yourself.<br></p>
                     &nbsp;
                     &nbsp;
-                    <p>Head Teachers Comment:This is an excellent result. <br></p>
+                    <p>Head Teachers Comment:This is an excellent result.Keep soaring high. <br></p>
 
                     &nbsp;
                     &nbsp;
