--- a/PreSchool/Olatunji-Ojima-Result.html
+++ b/PreSchool/Olatunji-Ojima-Result.html
@@ -478,7 +478,7 @@
                        
                      </tr>
                   </table>
-                  <p>Class Teachers Comment: Olatunji is a great pupil. He is always excited to learn. <br></p>
+                  <p>Class Teachers Comment: Olatunji has shown a lot of improvement this term. keep it up. <br></p>
                   &nbsp;
                   &nbsp;
                   <p>Head Teachers Comment:This is a very good result. <br></p>
