--- a/PreSchool/Olayiwola-Shindara-Result.html
+++ b/PreSchool/Olayiwola-Shindara-Result.html
@@ -477,10 +477,10 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment:Shindara is a great pupil. She is always excited to learn. <br></p>
+                    <p>Class Teachers Comment:This is an excellent performance.Keep soaring high. <br></p>
                     &nbsp;
                     &nbsp;
-                    <p>Head Teachers Comment:This is a very good result.<br></p>
+                    <p>Head Teachers Comment: An excellent result.Keep it up.<br></p>
 
                     &nbsp;
                     &nbsp;
