--- a/PreSchool/Oyenusi-Ifeoluwa-Result.html
+++ b/PreSchool/Oyenusi-Ifeoluwa-Result.html
@@ -477,10 +477,10 @@
                        
                      </tr>
                   </table>
-                  <p>Class Teachers Comment: Ifeoluwa has potentials to do better but she needs to be more enthusiastic towards learning.<br></p>
+                  <p>Class Teachers Comment: This is a very good performance. Your progress is commendable.<br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:This is a very good result. <br></p>
+                     <p>Head Teachers Comment:A very good result.Keep it up. <br></p>
 
                      &nbsp;
                      &nbsp;  
