--- a/PreSchool/Popoola-Obaloluwa-Result.html
+++ b/PreSchool/Popoola-Obaloluwa-Result.html
@@ -478,10 +478,10 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment: Obaloluwa is a great pupil. He is always excited to learn.<br></p>
+                    <p>Class Teachers Comment: An excelllent result.Keep soaring to new heights.<br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: This is a very good result.<br></p>
+                     <p>Head Teachers Comment: An excelllent result.Bravo!<br></p>
 
                      &nbsp;
                      &nbsp;
