--- a/PreSchool/Shenaike-Boluwatife-Result.html
+++ b/PreSchool/Shenaike-Boluwatife-Result.html
@@ -478,10 +478,10 @@
                        
                      </tr>
                   </table>
-                  <p>Class Teachers Comment: Boluwatife has made significant improvement this term. We are very pleased with his progress.<br></p>
+                  <p>Class Teachers Comment: This is a very good performance.Keep up the good work.<br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: This is a very good result.<br></p>
+                     <p>Head Teachers Comment: A very good result.<br></p>
 
                      &nbsp;
                      &nbsp;
