--- a/PreSchool/Wahab-Abdulwahab-Result.html
+++ b/PreSchool/Wahab-Abdulwahab-Result.html
@@ -476,10 +476,10 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                      <p>Class Teachers Comment: A very good result. Keep up the positive attitude.<br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment:______________________________________________<br>_____________________________________________________</p>
+                        <p>Head Teachers Comment: We are happy to have you as part of our school community. You are welcome to preschool.<br></p>
 
                         &nbsp;
                         &nbsp;                
