--- a/PreSchool/Wahab-Aminullah-Hussain-Result.html
+++ b/PreSchool/Wahab-Aminullah-Hussain-Result.html
@@ -93,7 +93,7 @@
                   <div class="titlepage p1">
                      <h2>Result for <br>Wahab Aminullah Hussain</h2><br>
                      <h2> Pre School </h2>
-                     <p>Continuous Assessment Scores for Term ................... </p>
+                     <p>Continuous Assessment Scores for Term Second 2023/2024/p>
                   <!-- Attendance Table-->
                   &nbsp;
                   &nbsp;
@@ -479,10 +479,10 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment: Hussain is always willing to learn. We are happy to have him in the preschool class <br></p>
+                      <p>Class Teachers Comment:Aminullah Hussain is always willing to learn. We are happy to have him in the preschool class <br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment:We are happy to have you as part of our school community. You are welcome to preschool.<br></p>
+                        <p>Head Teachers Comment: You are welcome to preschool.<br></p>
 
                         &nbsp;
                         &nbsp;                
