--- a/PreSchool/Asake-Mololuwa-Result.html
+++ b/PreSchool/Asake-Mololuwa-Result.html
@@ -479,7 +479,7 @@
                      
                    </tr>
                 </table>
-                <p>Class Teachers Comment: Impressuve result.Mololuwa, keep shinning <br></p>
+                <p>Class Teachers Comment: Impressive result.Mololuwa, keep shinning <br></p>
                   &nbsp;
                   &nbsp;
                   <p>Head Teachers Comment: This is a very good performance. <br></p>l
