--- a/PreSchool/Kayode-Tantoluwa-Result.html
+++ b/PreSchool/Kayode-Tantoluwa-Result.html
@@ -482,7 +482,7 @@
                     <p>Class Teachers Comment: This is a fantastic performance.Keep soaring high. <br></p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: A very gpod performance. Keep it up.<br></p>
+                     <p>Head Teachers Comment: A very good performance. Keep it up.<br></p>
 
                      &nbsp;
                      &nbsp;
