--- a/PreSchool/Yinka-Sobo-Ogooluwa-Result.html
+++ b/PreSchool/Yinka-Sobo-Ogooluwa-Result.html
@@ -477,7 +477,7 @@
                          
                        </tr>
                     </table>
-                    <p>Class Teachers Comment: Ogooluwa always performs excelllently academically.<br></p>
+                    <p>Class Teachers Comment: Ogooluwa performs excelllently academically.<br></p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: This is a very good performance.Keep it up<br></p>
