--- a/GradeFive/Adebayo-Mufeedah-Olansile-Result.html
+++ b/GradeFive/Adebayo-Mufeedah-Olansile-Result.html
@@ -261,14 +261,14 @@
                        
                         <tr>
                           <td>V.Good</td>
+                          <td>Excellent</td>
                           <td>Good</td>
                           <td>Good</td>
                           <td>Excellent</td>
                           <td>Excellent</td>
-                          <td>Good</td>
                           <td>-</td>
                           <td>Good</td>
-                          <td>Good</td>
+                          <td>Average</td>
                           <td>V.Good</td>
                           <td>V.Good</td>
                           <td>-</td>
