--- a/PreSchool/Wahab-Aminullah-Hussain-Result.html
+++ b/PreSchool/Wahab-Aminullah-Hussain-Result.html
@@ -479,10 +479,10 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment:Aminullah Hussain is always willing to learn. We are happy to have him in the preschool class <br></p>
+                      <p>Class Teachers Comment:Aminullah Hussain is always willing to learn.  <br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment: You are welcome to preschool.<br></p>
+                        <p>Head Teachers Comment:We are happy to have you in our school community. You are welcome to preschool.<br></p>
 
                         &nbsp;
                         &nbsp;                
