--- a/GradeThree/Adaramaja-Akinbiyi-Result.html
+++ b/GradeThree/Adaramaja-Akinbiyi-Result.html
@@ -93,7 +93,7 @@
                   <div class="titlepage p1 ">
                      <h2>Result for <br>Adaramaja Akinbiyi</h2><br>
                      <h2> Grade Three </h2>
-                     table>
+                  <table>
                         <p>Continuous Assessment Scores for Term  ....2nd term 2023/2024................. </p>
                          
                         <!-- Attendance Table-->
