--- a/PreSchool/Fakayode-Adesewa-Result.html
+++ b/PreSchool/Fakayode-Adesewa-Result.html
@@ -479,7 +479,7 @@
                         
                       </tr>
                    </table>
-                   <p>Class Teachers Comment: This is an excellen result. Keep challenging yourself.<br></p>
+                   <p>Class Teachers Comment: This is an excellent result. Keep challenging yourself.<br></p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: This is an excellent performance. <br></p>
