--- a/GradeTwo/Adeniba-Temiloluwa-Result.html
+++ b/GradeTwo/Adeniba-Temiloluwa-Result.html
@@ -918,7 +918,7 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Temiloluwa is cheerful but there is need to put in.<br> more effort in his studies._____________________________________________________</p>
+                     <p>Class Teachers Comment: Temiloluwa is cheerful but there is need to put in<br> more effort in his studies._____________________________________________________</p>
                      &nbsp;
                      &nbsp;
                      <p>Head Teachers Comment: Temiloluwa needs to take his work more seriously.<br>_____________________________________________________</p>
