--- a/PreSchool/Wahab-Abdulwahab-Result.html
+++ b/PreSchool/Wahab-Abdulwahab-Result.html
@@ -136,7 +136,7 @@
                           <th>Handwriting</th>
                           <th>Creative Art</th>
                           <th>Computer</th>
-
+                          <th>French</th>
                         </tr>
                         <tr>
                            <td>100</td>
