--- a/PreSchool/Wahab-Abdulwahab-Result.html
+++ b/PreSchool/Wahab-Abdulwahab-Result.html
@@ -135,8 +135,8 @@
                           <th>Mathematics</th>
                           <th>Handwriting</th>
                           <th>Creative Art</th>
-                          <th>Computer</th>
-                          <th>French</th>
+                          <th>Computer</th> <th>French</th>
+                          
                         </tr>
                         <tr>
                            <td>100</td>
