--- a/GradeOne/Olajide-Zahra-Result.html
+++ b/GradeOne/Olajide-Zahra-Result.html
@@ -503,7 +503,7 @@
                                                   
                                                 </tr>
                                              </table>
-                                             <p>Class Teachers Comment:.An outstanding performance.Keep soaring and stay focus </p>
+                                             <p>Class Teachers Comment:.An outstanding performance.Keep soaring and stay focussed. </p>
                                              &nbsp;
                                              &nbsp;
                                              <p>Head Teachers Comment:An excellent performance, Keep it up</p>
