--- a/GradeFive/Adeniji-Pamilerin-Result.html
+++ b/GradeFive/Adeniji-Pamilerin-Result.html
@@ -262,15 +262,15 @@
                         </tr>
                         
                         <tr>
-                          <td>Good</td>
+                          <td>Average</td>
                           <td>V.Good</td>
                           <td>Good</td>
-                          <td>Good</td>
-                          <td>Excellent</td>
-                          <td>Excellent</td>
-                          <td>Excellent</td>
                           <td>Average</td>
-                          <td>Good</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Excellent</td>
+                          <td>Fair</td>
+                          <td>Average</td>
                           <td>V.Good</td>
                           <td>V.Good</td>
                           <td>-</td>
