--- a/GradeTwo/Owolabi-Anjola-Result.html
+++ b/GradeTwo/Owolabi-Anjola-Result.html
@@ -503,7 +503,7 @@
                                                   
                                                 </tr>
                                              </table>
-                                             <p>Class Teachers Comment: This is an good performance. Keep it up!<br>_____________________________________________________</p>
+                                             <p>Class Teachers Comment: This is a good performance. Keep it up!<br>_____________________________________________________</p>
                                              &nbsp;
                                              &nbsp;
                                              <p>Head Teachers Comment: Good job!.<br>_____________________________________________________</p>
