--- a/PreSchool/Olayiwola-Shindara-Result.html
+++ b/PreSchool/Olayiwola-Shindara-Result.html
@@ -91,7 +91,7 @@
                   <div class="titlepage p1 ">
                      <h2>Result for <br>Olayiwola Shindara</h2><br>
                      <h2> Pre School </h2>
-                     <p>Continuous Assessment Scores for Term First 2023/2024 </p>
+                     <p>Continuous Assessment Scores for Term Second 2023/2024 </p>
                      <!-- Attendance Table-->
                     &nbsp;
                     &nbsp;
@@ -110,12 +110,12 @@
                        </tr>
                        <tr>
                          <td>No. of times school opened</td>
-                         <td>118</td> 
+                         <td>120</td> 
                                         
                       </tr>
                       <tr>
                          <td>No. of times present</td>
-                         <td>118</td> 
+                         <td>120</td> 
                                         
                       </tr>
                      </table>
