--- a/GradeFive/Balogun-David-Result.html
+++ b/GradeFive/Balogun-David-Result.html
@@ -269,7 +269,7 @@
                           <td>Excellent</td>
                           <td>Excellent</td>
                           <td>Excellent</td>
-                          <td>Good</td>
+                          <td>Average</td>
                           <td>V.Good</td>
                           <td>Excellent</td>
                           <td>V.Good</td>
