--- a/PreSchool/Oyenusi-Ifeoluwa-Result.html
+++ b/PreSchool/Oyenusi-Ifeoluwa-Result.html
@@ -241,7 +241,7 @@
                        <td>Very good</td>
                        <td>Good</td>
                        <td>Very good</td>
-                        <td>E</td
+                        <td>Good</td
                         <td>Excellent</td>
                         <td>Very good</td>
                         <td>Excellent</td>
