--- a/GradeFive/Duruh-Chizaramekpere-Benedicta-Result.html
+++ b/GradeFive/Duruh-Chizaramekpere-Benedicta-Result.html
@@ -509,7 +509,7 @@
                      <p>Class Teachers Comment:Chizaramekpere is a very expressive and confident pupil. C<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: Excellent Result <br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: Excellent Result. <br>_____________________________________________________</p>
 
                         <p>Continuous Assessment Scores for Term  1st Term 2023/2024 </p>
                          
