--- a/GradeFive/Onoja-Empress-Result.html
+++ b/GradeFive/Onoja-Empress-Result.html
@@ -509,7 +509,7 @@
                      <p>Class Teachers Comment:Empress is a conscienctious hardworking pupil. C<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: V. Good Result <br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: V. Good Result. <br>_____________________________________________________</p>
 
                         <p>Continuous Assessment Scores for Term   1st Term 2023/2024 </p>
                          
