--- a/GradeFive/Adebayo-Mufeedah-Olansile-Result.html
+++ b/GradeFive/Adebayo-Mufeedah-Olansile-Result.html
@@ -504,10 +504,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment:Bravo,there's still room for improvement<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment:Bravo,there's still room for improvement.<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:A very good result<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment:A very good result.<br>_____________________________________________________</p>
 
                      &nbsp;
                      &nbsp;
