--- a/GradeFive/Adefiranye-Mofiyin-Result.html
+++ b/GradeFive/Adefiranye-Mofiyin-Result.html
@@ -507,10 +507,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Mofiyin is kind,respectful and helpful when interacting with his peers<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Mofiyin is kind,respectful and helpful when interacting with his peers.<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:Very good performance<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment:Very good performance.<br>_____________________________________________________</p>
 
                         <p>Continuous Assessment Scores for Term  1st term 2023/2024 </p>
                          
