--- a/GradeFive/Adegbite-Joel-Result.html
+++ b/GradeFive/Adegbite-Joel-Result.html
@@ -507,10 +507,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Joel,readily grasps new concepts and ideas,sets achievable goals with respect to time<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Joel,readily grasps new concepts and ideas,sets achievable goals with respect to time.<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: Excellent performance<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: Excellent performance.<br>_____________________________________________________</p>
 
                         <p>Continuous Assessment Scores for Term   1st Term 2023/2024 </p>
                          
