--- a/GradeFive/Adeniji-Pamilerin-Result.html
+++ b/GradeFive/Adeniji-Pamilerin-Result.html
@@ -506,10 +506,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Pamilerin,works independently and pays attention during lessons<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Pamilerin,works independently and pays attention during lessons.<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: Good performance<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: Good performance.<br>_____________________________________________________</p>
 
                         <p>Continuous Assessment Scores for Term  1st Term 2023/2024 </p>
                          
