--- a/GradeFive/Adetola-Omotolani-Result.html
+++ b/GradeFive/Adetola-Omotolani-Result.html
@@ -506,10 +506,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Tolani,has shown strong signs of growth in all learning areas<br>_____________________________________________________</p>
+                     <p>Class Teachers Comment: Tolani,has shown strong signs of growth in all learning areas.<br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: Good performance<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: Good performance.<br>_____________________________________________________</p>
 
                         <p>Continuous Assessment Scores for Term  1st Term 2023/2024 </p>
                          
