--- a/GradeFive/Adeyemi-Fareeda-Result.html
+++ b/GradeFive/Adeyemi-Fareeda-Result.html
@@ -509,7 +509,7 @@
                      <p>Class Teachers Comment: Fareeda,has an inquisitive and engaged mind. <br>_____________________________________________________</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment:V.Good performance<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment:V.Good performance.<br>_____________________________________________________</p>
 
                         <p>Continuous Assessment Scores for  Term 1st Term 2023/2024  </p>
                          
