--- a/PreSchool/Wahab-Ahmad-Hassan-Result.html
+++ b/PreSchool/Wahab-Ahmad-Hassan-Result.html
@@ -481,10 +481,10 @@
                            
                          </tr>
                       </table>
-                      <p>Class Teachers Comment: Ahmad Hassan is a great pupil. We are happy to have him in the preschool class. <br></p>
+                      <p>Class Teachers Comment: Ahmad Hassan is a great pupil. <br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment: Welcome to preschool.<br></p>
+                        <p>Head Teachers Comment:We are happy to have you as of our school community. Welcome to preschool.<br></p>
 
                         &nbsp;
                         &nbsp;                
