--- a/GradeFour/Fashola-Tobiloba-Result.html
+++ b/GradeFour/Fashola-Tobiloba-Result.html
@@ -274,7 +274,7 @@
                           <td>Very good</td>
                           <td>Good</td>
                           <td>Very good</td>
-                          <td>Excellent/td>
+                          <td>Excellent
                           <td></td>
                           <td>Teachers Remarks</td>                           
                         </tr>
