--- a/PreSchool/Wahab-Aminullah-Hussain-Result.html
+++ b/PreSchool/Wahab-Aminullah-Hussain-Result.html
@@ -482,7 +482,7 @@
                       <p>Class Teachers Comment:Aminullah Hussain is always willing to learn.  <br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment:We are happy to have you in our school community. You are welcome to preschool.<br></p>
+                        <p>Head Teachers Comment:We are happy to have you as part of our school community. You are welcome to preschool.<br></p>
 
                         &nbsp;
                         &nbsp;                
