--- a/GradeOne/Ogunwomoju-King-Jason-Result.html
+++ b/GradeOne/Ogunwomoju-King-Jason-Result.html
@@ -257,7 +257,7 @@
                                                   <td>83</td>
                                                   <td>96</td>
                                                   <td></td>
-                                                  <td>Teachers Remarks</td>                           
+                                                  <td>Final Result</td>                           
                                                 </tr>
                                                <td>Final Result</td>
                                                 </tr>
