--- a/GradeFour/Folarin-Subomi-Result.html
+++ b/GradeFour/Folarin-Subomi-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Folarin Subomi</h2><br>
                      <h2> Grade Four </h2>
                      <table>
-                        <p>Continuous Assessment Scores for Term: 2nd Term 2023/2024 </p>
+                        <p>Continuous Assessment Scores for Term: 2nd term 2023/2024 </p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
