--- a/GradeFour/Ibiyemi-Roishat-Result.html
+++ b/GradeFour/Ibiyemi-Roishat-Result.html
@@ -267,7 +267,7 @@
                           <td>Excellent</td>
                           <td>Very good</td>
                           <td>Very good</td>
-                          <td>Very goo</td>
+                          <td>Very good</td>
                           <td>Excellent</td>
                           <td>-</td>
                           <td>Good</td>
