--- a/PreSchool/Wahab-Abdulwahab-Result.html
+++ b/PreSchool/Wahab-Abdulwahab-Result.html
@@ -135,7 +135,11 @@
                           <th>Mathematics</th>
                           <th>Handwriting</th>
                           <th>Creative Art</th>
-                          <th>Computer</th> <th>French</th>
+                          <th>Computer</th>
+                          <th>French</th>
+                          <th>General Paper</th>
+                          <th>CRS</th>
+                          <th>Montessori Science</th>
                           
                         </tr>
                         <tr>
