--- a/GradeFour/Afolabi-Abdulfatah.html
+++ b/GradeFour/Afolabi-Abdulfatah.html
@@ -131,7 +131,7 @@
                                              Results<br> Notes<br> Records
                                           </h3>
                                           <div class="link_btn">
-                                             <a class="read_more" href="">Afolabi Abdulfatah<span></span></a>
+                                             <a class="read_more" href="">Afolabi Abdulfatai<span></span></a>
                                           </div>
                                        </div>
                                     </div>
@@ -201,7 +201,7 @@
                      <h3>Results</h3>
                      <p>Click read more to see results</p>
                   </div>
-                  <a class="read_more" href="Afolabi-Abdulfatah-Result.html">Read More</a>
+                  <a class="read_more" href="Afolabi-Abdulfatai-Result.html">Read More</a>
                </div>
                <div class="col-md-4 margi_bottom">
                   <div class="class_box blue text_align_center">
