--- a/PreSchool/Wahab-Ahmad-Hassan-Result.html
+++ b/PreSchool/Wahab-Ahmad-Hassan-Result.html
@@ -484,7 +484,7 @@
                       <p>Class Teachers Comment: Ahmad Hassan is a great pupil. <br></p>
                         &nbsp;
                         &nbsp;
-                        <p>Head Teachers Comment:We are happy to have you as of our school community. Welcome to preschool.<br></p>
+                        <p>Head Teachers Comment:We are happy to have you as part of our school community. Welcome to preschool.<br></p>
 
                         &nbsp;
                         &nbsp;                
