--- a/GradeFour/Afolabi-Abdulfatah.html
+++ b/GradeFour/Afolabi-Abdulfatah.html
@@ -105,7 +105,7 @@
                                        <div class="board">
                                           <i><img src="images/top_icon.png" alt="#"/></i>
                                           <h3>
-                                             Afolabi <br> Abdulfatah's<br> Portal
+                                             Afolabi <br> Abdulfatai's<br> Portal
                                           </h3>
                                           <!--div class="link_btn">
                                              <a class="read_more" href="Javascript:void(0)">Read More   <span></span></a>
