--- a/GradeFour/Afolabi-Abdulfatah-Result.html
+++ b/GradeFour/Afolabi-Abdulfatah-Result.html
@@ -91,7 +91,7 @@
                   &nbsp;
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1 ">
-                     <h2>Result for <br>Afolabi Abdulfatah</h2><br>
+                     <h2>Result for <br>Afolabi Abdulfatai</h2><br>
                      <h2> Grade Four </h2>
                      table>
                         <p>Continuous Assessment Scores for Term: 2nd term 2023/2024 </p>
