--- a/PreSchool/Agbejoye-Ayanfe-Result.html
+++ b/PreSchool/Agbejoye-Ayanfe-Result.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
    <head>
       <!-- basic -->
@@ -93,7 +93,7 @@
                   <div class="titlepage p1 ">
                      <h2>Result for <br>Agbejoye Ayanfe</h2><br>
                      <h2> Pre School </h2>
-                     <p>Continuous Assessment Scores for Term Second 2023/2024</p>
+                     <p>Continuous Assessment Scores for Term Third 2023/2024</p>
                   <!-- Attendance Table-->
                   &nbsp;
                   &nbsp;
@@ -162,15 +162,15 @@
                      <td>1st Half</td>
                    </tr>
                     <tr>
-                      <td>98</td>
-                      <td>100</td>
+                      <td>92</td>
+                      <td>95</td>
                       <td>80</td>
-                      <td>68</td>
+                      <td>65</td>
                       <td>100</td>
-                      <td>100</td>
-                     <td>80</td>
-                     <td>80</td>
-                     <td>75</td>
+                      <td>90</td>
+                     <td>100</td>
+                     <td>100</td>
+                     <td>100</td>
                      
                       <td>Marks Obtained</td>
                       
