--- a/PreSchool/Akinpelu-Tobiloba-Result.html
+++ b/PreSchool/Akinpelu-Tobiloba-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Akinpelu Tobiloba</h2><br>
                      <h2> Pre School </h2>
                      
-                     <p>Continuous Assessment Scores for Term  Second 2023/2024 </p>
+                     <p>Continuous Assessment Scores for Term  Third 2023/2024 </p>
                    <!-- Attendance Table-->
                   &nbsp;
                   &nbsp;
@@ -163,11 +163,11 @@
                      <td>1st Half</td>
                     <tr>
                       <td>90</td>
+                      <td>92</td>
+                      <td>78</td>
+                      <td>70</td>
                       <td>95</td>
-                      <td>73</td>
-                      <td>75</td>
-                      <td>85</td>
-                      <td>100</td>
+                      <td>50</td>
                      <td>100</td>
                      <td>100</td>
                      <td>100</td>
