--- a/PreSchool/Enisemo-Tolorunnimi-Result.html
+++ b/PreSchool/Enisemo-Tolorunnimi-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Enisemo-Tolorunnimi</h2><br>
                      <h2> Pre School </h2>
 
-                     <p>Continuous Assessment Scores for Term Second 2023/2024 </p>
+                     <p>Continuous Assessment Scores for Term Third 2023/2024 </p>
 
                      <!-- Attendance Table-->
                   &nbsp;
@@ -164,11 +164,11 @@
                     </tr>
                      <tr>
                        <td>100</td>
-                       <td>85</td>
-                       <td>72</td>
+                       <td>80</td>
                        <td>75</td>
-                       <td>95</td>
-                      <td>100</td>
+                       <td>75</td>
+                       <td>90</td>
+                      <td>80</td>
                       <td>100</td>
                       <td>100</td>
                       <td>100</td>
