--- a/PreSchool/Fakayode-Adesewa-Result.html
+++ b/PreSchool/Fakayode-Adesewa-Result.html
@@ -93,7 +93,7 @@
                   <div class="titlepage p1 ">
                      <h2>Result for <br>Fakayode Adesewa</h2><br>
                      <h2> Pre School </h2>
-                     <p>Continuous Assessment Scores for Term Second 2023/2024 </p>
+                     <p>Continuous Assessment Scores for Term Third 2023/2024 </p>
 
                      <!-- Attendance Table-->
                     &nbsp;
@@ -162,13 +162,13 @@
                         
                         <td>1st Half</td>
                       <tr>
-                        <td>98</td>
                         <td>90</td>
+                        <td>88</td>
+                        <td>79</td>
                         <td>95</td>
-                        <td>93</td>
-                        <td>95</td>
+                        <td>85</td>
                         <td>100</td>
-                        <td>95</td>
+                        <td>100</td>
                         <td>100</td>
                         <td>100</td>
                        
