--- a/PreSchool/Kayode-Tantoluwa-Result.html
+++ b/PreSchool/Kayode-Tantoluwa-Result.html
@@ -92,7 +92,7 @@
                      <h2>Result for <br>Kayode Tantoluwa</h2><br>
                      <h2> Pre School </h2>
 
-                     <p>Continuous Assessment Scores for Term Second 2023/2024 </p>
+                     <p>Continuous Assessment Scores for Term Third 2023/2024 </p>
                      <!-- Attendance Table-->
                     &nbsp;
                     &nbsp;
@@ -160,14 +160,14 @@
                         
                         <td>1st Half</td>
                       <tr>
-                        <td>92</td>
+                        <td>90</td>
                         <td>100</td>
-                        <td>80</td>
-                        <td>70</td>
                         <td>85</td>
+                        <td>70</td>
+                        <td>80</td>
                         <td>60</td>
-                        <td>80</td>
-                        <td>80</td>
+                        <td>100</td>
+                        <td>100</td>
                         <td>100</td>
                        
                         <td>Marks Obtainabed</td>
