--- a/PreSchool/Odusanya-Jemima-Result.html
+++ b/PreSchool/Odusanya-Jemima-Result.html
@@ -92,7 +92,7 @@
                      <h2>Result for <br>Odusanya Jemima</h2><br>
                      <h2> Pre School </h2>
 
-                     <p>Continuous Assessment Scores for Term Second 2023/2024  </p>
+                     <p>Continuous Assessment Scores for Term Third 2023/2024  </p>
                      <!-- Attendance Table-->
                     &nbsp;
                     &nbsp;
@@ -160,12 +160,12 @@
                         
                         <td>1st Half</td>
                       <tr>
-                        <td>98</td>
-                        <td>94</td>
-                        <td>80</td>
-                        <td>85</td>
+                        <td>90</td>
+                        <td>92</td>
+                        <td>90</td>
+                        <td>90</td>
                         <td>95</td>
-                        <td>65</td>
+                        <td>100</td>
                         <td>100</td>
                         <td>100</td>
                         <td>100</td>
