--- a/PreSchool/Ola-Daniel-Fikayomi-Result.html
+++ b/PreSchool/Ola-Daniel-Fikayomi-Result.html
@@ -93,7 +93,7 @@
                   <div class="titlepage p1">
                      <h2>Result for <br>Ola-Daniel Fikayomi</h2><br>
                      <h2> Pre School </h2>
-                     <p>Continuous Assessment Scores for Term Second 2023/2024 </p>
+                     <p>Continuous Assessment Scores for Term Third 2023/2024 </p>
                   <!-- Attendance Table-->
                   &nbsp;
                   &nbsp;
@@ -159,12 +159,12 @@
                          </tr>
                         <tr>
                           <td>100</td>
-                          <td>95</td>
-                          <td>70</td>
-                          <td>70</td>
-                          <td>90</td>
                           <td>100</td>
-                           <td>95</td>
+                          <td>90</td>
+                          <td>72</td>
+                          <td>100</td>
+                          <td>100</td>
+                           <td>100</td>
                            <td>100</td>
                            <td>100</td>
                          
