--- a/PreSchool/Oladokun-Divine-Result.html
+++ b/PreSchool/Oladokun-Divine-Result.html
@@ -92,7 +92,7 @@
                      <h2>Result for <br>Oladokun Divine</h2><br>
                      <h2> Pre School </h2>
 
-                     <p>Continuous Assessment Scores for Term second 2023/2024 </p>
+                     <p>Continuous Assessment Scores for Term Third 2023/2024 </p>
                      <!-- Attendance Table-->
                     &nbsp;
                     &nbsp;
@@ -160,11 +160,11 @@
                         
                         <td>1st Half</td>
                       <tr>
+                        <td>90</td>
                         <td>95</td>
-                        <td>100</td>
+                        <td>90</td>
                         <td>75</td>
-                        <td>75</td>
-                        <td>85</td>
+                        <td>80</td>
                         <td>100</td>
                         <td>100</td>
                         <td>100</td>
