--- a/PreSchool/Olapade-Thelight-Result.html
+++ b/PreSchool/Olapade-Thelight-Result.html
@@ -92,7 +92,7 @@
                      <h2>Result for <br>Olapade Thelight</h2><br>
                      <h2> Pre School </h2>
 
-                     <p>Continuous Assessment Scores for Term Second 2023/2024 </p>
+                     <p>Continuous Assessment Scores for Term Third 2023/2024 </p>
                      <!-- Attendance Table-->
                     &nbsp;
                     &nbsp;
@@ -161,9 +161,9 @@
                         <td>1st Half</td>
                       <tr>
                         <td>100</td>
-                        <td>90</td>
-                        <td>78</td>
-                        <td>70</td>
+                        <td>100</td>
+                        <td>85</td>
+                        <td>75</td>
                         <td>100</td>
                         <td>100</td>
                         <td>100</td>
