--- a/PreSchool/Oyenusi-Ifeoluwa-Result.html
+++ b/PreSchool/Oyenusi-Ifeoluwa-Result.html
@@ -92,7 +92,7 @@
                      <h2>Result for <br>Oyenusi Ifeoluwa</h2><br>
                      <h2> Pre School </h2>
 
-                     <p>Continuous Assessment Scores for Term Second 2023/2024  </p>
+                     <p>Continuous Assessment Scores for Term Third 2023/2024  </p>
                    <!-- Attendance Table-->
                   &nbsp;
                   &nbsp;
@@ -160,13 +160,13 @@
                      
                      <td>1st Half</td>
                     <tr>
-                      <td>100</td>
-                      <td>95</td>
-                      <td>78</td>
+                      <td>90</td>
+                      <td>84</td>
+                      <td>87</td>
+                      <td>90</td>
                       <td>80</td>
-                      <td>80</td>
-                     <td>70</td>
-                     <td>95</td>
+                     <td>100</td>
+                     <td>80</td>
                      <td>100</td>
                       <td>100</td>
                       <td>Marks Obtained</td>
