--- a/PreSchool/Popoola-Obaloluwa-Result.html
+++ b/PreSchool/Popoola-Obaloluwa-Result.html
@@ -92,7 +92,7 @@
                      <h2>Result for <br>Popoola Obaloluwa</h2><br>
                      <h2> Pre School </h2>
 
-                     <p>Continuous Assessment Scores for Term Second 2023/2024 </p>
+                     <p>Continuous Assessment Scores for Term Third 2023/2024 </p>
                      <!-- Attendance Table-->
                     &nbsp;
                     &nbsp;
@@ -161,12 +161,12 @@
                         <td>1st Half</td>
                       <tr>
                         <td>100</td>
-                        <td>95</td>
+                        <td>100</td>
                         <td>70</td>
-                        <td>78</td>
-                        <td>95</td>
                         <td>80</td>
-                        <td>95</td>
+                        <td>100</td>
+                        <td>80</td>
+                        <td>100</td>
                         <td>100</td>
                         <td>100</td>
                        
