--- a/PreSchool/Wahab-Abdulwahab-Result.html
+++ b/PreSchool/Wahab-Abdulwahab-Result.html
@@ -93,7 +93,7 @@
                   <div class="titlepage p1">
                      <h2>Result for <br>Wahab Abdulwahab</h2><br>
                      <h2> Pre School </h2>
-                     <p>Continuous Assessment Scores for Term Second 2023/2024 </p>
+                     <p>Continuous Assessment Scores for Term Third 2023/2024 </p>
                   <!-- Attendance Table-->
                   &nbsp;
                   &nbsp;
@@ -158,15 +158,15 @@
                            <td>1st Half</td>
                          </tr>
                         <tr>
-                          <td>98</td>
-                          <td>100</td>
-                          <td>70</td>
+                          <td>90</td>
+                          <td>94</td>
                           <td>80</td>
-                          <td>85</td>
                           <td>75</td>
-                          <td>85</td>
-                          <td>75</td>
-                          <td>70</td>
+                          <td>90</td>
+                          <td>80</td>
+                          <td>100</td>
+                          <td>100</td>
+                          <td>100</td>
                          
                           <td>Marks Obtained</td>
                           
