--- a/PreSchool/Wahab-Aminullah-Hussain-Result.html
+++ b/PreSchool/Wahab-Aminullah-Hussain-Result.html
@@ -93,7 +93,7 @@
                   <div class="titlepage p1">
                      <h2>Result for <br>Wahab Aminullah Hussain</h2><br>
                      <h2> Pre School </h2>
-                     <p>Continuous Assessment Scores for Term Second 2023/2024/p>
+                     <p>Continuous Assessment Scores for Term Third 2023/2024/p>
                   <!-- Attendance Table-->
                   &nbsp;
                   &nbsp;
@@ -162,13 +162,13 @@
                         <tr>
                           <td>90</td>
                           <td>98</td>
-                          <td>80</td>
-                          <td>62</td>
-                          <td>100</td>
-                          <td>60</td>
+                          <td>75</td>
+                          <td>70</td>
+                          <td>75</td>
                           <td>70</td>
                           <td>80</td>
-                          <td>60</td>
+                          <td>100</td>
+                          <td>100</td>
                          
                           <td>Marks Obtained</td>
                           
