--- a/PreSchool/Oluwarotimi-Success-Result.html
+++ b/PreSchool/Oluwarotimi-Success-Result.html
@@ -91,7 +91,7 @@
                   &nbsp;
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1">
-                     <h2>Result for <br>Adeyemo Matthew</h2><br>
+                     <h2>Result for <br>Oluwarotimi Success</h2><br>
                      <h2> Pre School </h2>
                      <p>Continuous Assessment Scores for Term ................... </p>
                   <!-- Attendance Table-->
