--- a/GradeTwo/Adeniyi-Todimu-Result.html
+++ b/GradeTwo/Adeniyi-Todimu-Result.html
@@ -501,10 +501,10 @@
                           
                         </tr>
                      </table>
-                     <p>Class Teachers Comment: Temiloluwa is cheerful but there is need to put in<br> more effort in his studies._____________________________________________________</p>
+                     <p>Class Teachers Comment: Todimu can do better.<br> _____________________________________________________</p>
                      &nbsp;
                      &nbsp;
-                     <p>Head Teachers Comment: Temiloluwa needs to take his work more seriously.<br>_____________________________________________________</p>
+                     <p>Head Teachers Comment: Todimu is promoted to grade 3.<br>_____________________________________________________</p>
 
                      &nbsp;
                      &nbsp;
