--- a/PreSchool/Akinpelu-Tobiloba-Result.html
+++ b/PreSchool/Akinpelu-Tobiloba-Result.html
@@ -192,11 +192,11 @@
                      <td>2nd Half</td>
                    </tr>
                    <tr>
-                     <td>93</td>
-                     <td>100i7  </td>
-                     <td>88</td>
+                     <td>75</td>
                      <td>85</td>
-                     <td>95</td>
+                     <td>82</td>
+                     <td>60</td>
+                     <td>85</td>
                      <td>100</td>
                      <td>100</td>
                      <td>100</td>
@@ -222,12 +222,12 @@
                      <td>Final Result</td>
                    </tr>
                    <tr>
-                     <td>92</td>
-                     <td>98</td>
-                     <td>81</td>
-                     <td>80</td>
+                     <td>83</td>
+                     <td>89</td>
+                     <td>86</td>
+                     <td>65</td>
                      <td>90</td>
-                     <td>100</td>
+                     <td>75</td>
                      <td>100</td>
                      <td>100</td>
                      <td>100</td>
@@ -238,12 +238,12 @@
                    </tr>
                   
                    <tr>
-                     <td>Excellent</td>
-                     <td>Excellent</td>
                      <td>Very good</td>
                      <td>Very good</td>
+                     <td>Very good</td>
+                     <td>Average</td>
                      <td>Excellent</td>
-                     <td>Excellent</td>
+                     <td>Good</td>
                      <td>Excellent</td>
                      <td>Excellent</td>
                      <td>Excellent</td>
