--- a/PreSchool/Bada-Moraninuoluwa-Result.html
+++ b/PreSchool/Bada-Moraninuoluwa-Result.html
@@ -93,7 +93,7 @@
                   <div class="titlepage p1">
                      <h2>Result for <br>Bada Moraninuoluwa</h2><br>
                      <h2> Pre School </h2>
-                     <p>Continuous Assessment Scores for Term ................... </p>
+                     <p>Continuous Assessment Scores for Term Third a2023/2024 </p>
                   <!-- Attendance Table-->
                   &nbsp;
                   &nbsp;
