--- a/PreSchool/Enisemo-Tolorunnimi-Result.html
+++ b/PreSchool/Enisemo-Tolorunnimi-Result.html
@@ -193,11 +193,11 @@
                       <td>2nd Half</td>
                     </tr>
                     <tr>
-                      <td>100</td>
-                      <td>90</td>
                       <td>85</td>
-                      <td>55</td>
-                      <td>85</td>
+                      <td>95</td>
+                      <td>75</td>
+                      <td>70</td>
+                      <td>80</td>
                       <td>100</td>
                       <td>100</td>
                       <td>100</td>
@@ -223,12 +223,12 @@
                       <td>Final Result</td>
                     </tr>
                     <tr>
-                      <td>100</td>
+                      <td>93</td>
                       <td>88</td>
-                      <td>79</td>
-                      <td>65</td>
+                      <td>75</td>
+                      <td>73</td>
+                      <td>85</td>
                       <td>90</td>
-                      <td>100</td>
                       <td>100</td>
                       <td>100</td>
                       <td>100</td>
@@ -240,10 +240,10 @@
                  
                     <tr>
                       <td>Excellent</td>
-                      <td>Ver ygood</td>
+                      <td>Very good</td>
                       <td>Good</td>
-                      <td>Average</td>
-                      <td>Excellent</td>
+                      <td>Good</td>
+                      <td>Very good</td>
                       <td>Excellent</td>
                       <td>Excellent</td>
                       <td>Excellent</td>
