--- a/GradeTwo/Akinbogun-Morayo-Result.html
+++ b/GradeTwo/Akinbogun-Morayo-Result.html
@@ -211,7 +211,7 @@
                           <td>90</td>
                           <td>89</td>
                           <td>86</td>
-                          <td></td>
+                          <td>70</td>
                           <td>92</td>
                           <td>96</td>
                           <td>95</td>
@@ -247,7 +247,7 @@
                           <td>85</td>
                           <td>90</td>
                           <td>81</td>
-                          <td></td>
+                          <td>70</td>
                           <td>80</td>
                           <td>86</td>
                           <td>94</td>
@@ -266,7 +266,7 @@
                           <td>V.Good</td>
                           <td>Excellent</td>
                           <td>V.Good</td>
-                          <td></td>
+                          <td>Good</td>
                           <td>V.Good</td>
                           <td>V.Good</td>
                           <td>Excellent</td>
