--- a/PreSchool/Ola-Daniel-Fikayomi-Result.html
+++ b/PreSchool/Ola-Daniel-Fikayomi-Result.html
@@ -112,7 +112,7 @@
                      </tr>
                      <tr>
                        <td>No. of times school opened</td>
-                       <td>120</td> 
+                       <td>122</td> 
                                       
                     </tr>
                     <tr>
@@ -190,10 +190,10 @@
                          </tr>
                          <tr>
                            <td>100</td>
+                           <td>90</td>
+                           <td>92</td>
+                           <td>90</td>
                            <td>100</td>
-                           <td>79</td>
-                           <td>65</td>
-                           <td>95</td>
                            <td>100</td>
                            <td>100</td>
                            <td>100</td>
@@ -220,12 +220,12 @@
                          </tr>
                          <tr>
                            <td>100</td>
-                           <td>98</td>
-                           <td>74</td>
-                           <td>68</td>
-                           <td>93</td>
+                           <td>95</td>
+                           <td>91</td>
+                           <td>81</td>
                            <td>100</td>
-                           <td>98</td>
+                           <td>100</td>
+                           <td>100</td>
                            <td>100</td>
                            <td>100</td>
                         
@@ -237,8 +237,8 @@
                          <tr>
                            <td>Excellent</td>
                            <td>Excellent</td>
-                           <td>Good</td>
-                           <td>Average</td>
+                           <td>Excellent</td>
+                           <td>Very good</td
                            <td>Excellent</td>
                            <td>Excellent</td>
                            <td>Excellent</td>
