--- a/PreSchool/Oladokun-Divine-Result.html
+++ b/PreSchool/Oladokun-Divine-Result.html
@@ -111,7 +111,7 @@
                        </tr>
                        <tr>
                          <td>No. of times school opened</td>
-                         <td>120</td> 
+                         <td>122</td> 
                                         
                       </tr>
                       <tr>
@@ -191,11 +191,11 @@
                          <td>2nd Half</td>
                        </tr>
                        <tr>
+                         <td>95</td>
                          <td>100</td>
-                         <td>90</td>
-                         <td>90</td>
-                         <td>78</td>
                          <td>85</td>
+                         <td>90</td>
+                         <td>90</td>
                         <td>100</td>
                         <td>100</td>
                         <td>100</td>
@@ -221,11 +221,11 @@
                          <td>Final Result</td>
                        </tr>
                        <tr>
-                         <td>100</td>
-                         <td>100</td>
-                         <td>85</td>
+                         <td>93</td>
+                         <td>98</td>
                          <td>88</td>
-                         <td>90</td>
+                         <td>83</td>
+                         <td>85</td>
                         <td>100</td>
                         <td>100</td>
                         <td>100</td>
@@ -239,7 +239,7 @@
                          <td>Excellent</td>
                          <td>Excellent</td>
                          <td>Very good</td>
-                         <td>Good</td>
+                         <td>Very good</td>
                          <td>Very good</td>
                         <td>Excellent</td>
                         <td>Excellent</td>
