--- a/GradeFive/Adebayo-Mufeedah-Olansile-Result.html
+++ b/GradeFive/Adebayo-Mufeedah-Olansile-Result.html
@@ -262,7 +262,7 @@
                        
                         <tr>
                           <td>V.Good</td>
-                          <td>V.Goood/td>
+                          <td>V.Good</td>
                           <td>Average</td>
                           <td>Good</td>
                           <td>V.Good</td>
