--- a/PreSchool/Popoola-Obaloluwa-Result.html
+++ b/PreSchool/Popoola-Obaloluwa-Result.html
@@ -116,7 +116,7 @@
                       </tr>
                       <tr>
                          <td>No. of times present</td>
-                         <td>120</td> 
+                         <td>122</td> 
                                         
                       </tr>
                      </table>
@@ -191,11 +191,11 @@
                          <td>2nd Half</td>
                        </tr>
                        <tr>
-                         <td>98</td>
-                         <td>98</td>
-                         <td>90</td>
-                         <td>75</td>
-                         <td>95</td>
+                         <td>96</td>
+                         <td>100</td>
+                         <td>78</td>
+                         <td>65</td>
+                         <td>100</td>
                          <td>100</td>
                         <td>100</td>
                         <td>100</td>
@@ -221,13 +221,13 @@
                          <td>Final Result</td>
                        </tr>
                        <tr>
-                         <td>99</td>
-                         <td>97</td>
-                         <td>80</td>
-                         <td>77</td>
-                         <td>95</td>
+                         <td>98</td>
+                         <td>100</td>
+                         <td>72</td>
+                         <td>73</td>
+                         <td>100</td>
                          <td>90</td>
-                        <td>98</td>
+                        <td>100</td>
                         <td>100</td>
                         <td>100</td>
                          
@@ -239,7 +239,7 @@
                        <tr>
                          <td>Excellent</td>
                          <td>Excellent</td>
-                         <td>Very good</td>
+                         <td>Good</td>
                          <td>Good</td>
                          <td>Excellent</td>
                          <td>Excellent</td>
